--- a/src/app/layout/auth/components/home/home.html
+++ b/src/app/layout/auth/components/home/home.html
@@ -3,7 +3,7 @@
         <nav>
             <div class="logo">
                 <div class="logo-icon">
-                    <img src="/img/logo/logo_original.png" alt="SocialLike Logo" style="height: 40px; width: auto;" />
+                    <img src="/img/logo/logo_original.png" alt="SocialLike Logo" />
                 </div>
                 <h1>SocialLike</h1>
             </div>
@@ -18,7 +18,7 @@
         <p>Conecta con personas de todo el mundo, comparte tus pasiones y descubre historias inspiradoras. SocialLike es
             más que una red social: es un espacio para crear recuerdos, expresar tu creatividad y construir amistades
             auténticas.</p>
-        <div style="display: flex; justify-content: center;">
+        <div class="hero-content">
             <a href="login" class="cta-button"><i class="fas fa-user-plus"></i> ¡Regístrate Gratis Hoy!</a>
         </div>
     </div>
@@ -74,28 +74,28 @@
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTYFoXuteOgeGaflg6d6ImFzER2pRja6byMJA&s"
                     alt="Community Moment 1" class="gallery-img">
                 <div class="gallery-overlay">
-                    <p style="color: #fff;">Explorando el mundo</p>
+                    <p>Explorando el mundo</p>
                 </div>
             </div>
             <div class="gallery-item">
                 <img src="https://www.beedigital.es/wp-content/uploads/2025/04/0bb8747cfd216dfd1e8e7145f2d84dc2366223199-3.jpg"
                     alt="Community Moment 2" class="gallery-img">
                 <div class="gallery-overlay">
-                    <p style="color: #fff;">Compartiendo pasiones</p>
+                    <p>Compartiendo pasiones</p>
                 </div>
             </div>
             <div class="gallery-item">
                 <img src="https://www.semana.com/resizer/v2/4CKIEGP4QZAGNGYHHQQF7QKTNE.jpg?auth=1013efa78416b1981714f60a5b322e22a5760687d9a93c18c2afb2c8b30218f3&smart=true&quality=75&width=1920&height=1080"
                     alt="Community Moment 3" class="gallery-img">
                 <div class="gallery-overlay">
-                    <p style="color: #fff;">Creando recuerdos</p>
+                    <p>Creando recuerdos</p>
                 </div>
             </div>
             <div class="gallery-item">
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTNYclElPzKlcGNzAXermQUPpJpRjtWKfGAbQ&s"
                     alt="Community Moment 4" class="gallery-img">
                 <div class="gallery-overlay">
-                    <p style="color: #fff;">Amistades auténticas</p>
+                    <p>Amistades auténticas</p>
                 </div>
             </div>
         </div>
@@ -116,8 +116,7 @@
             <div class="footer-column logo-column">
                 <div class="logo">
                     <div class="logo-icon">
-                        <img src="/img/logo/logo_original.png" alt="SocialLike Logo"
-                            style="height: 40px; width: auto;" />
+                        <img src="/img/logo/logo_original.png" alt="SocialLike Logo" />
                     </div>
                     <h1>SocialLike</h1>
                 </div>
