--- a/src/app/layout/auth/components/login/login.html
+++ b/src/app/layout/auth/components/login/login.html
@@ -8,14 +8,15 @@
         </div>
         <h2>Iniciar Sesión</h2>
         <p>Bienvenido de nuevo a SocialLike. Ingresa tus credenciales para continuar.</p>
-        <form>
+        <form (ngSubmit)="formSubmit()" #loginForm="ngForm">
             <div class="form-group">
                 <label for="username"><i class="fas fa-user"></i> Usuario</label>
-                <input type="text" id="username" name="username" placeholder="Ingresa tu usuario" required>
+                <input type="text" [(ngModel)]="loginData.username" id="username" name="username"
+                    placeholder="Ingresa tu usuario" required>
             </div>
             <div class="form-group">
                 <label for="password"><i class="fas fa-lock"></i> Contraseña</label>
-              <div class="password-group">
+                <div class="password-group">
                     <input [type]="showPassword ? 'text' : 'password'" id="password" name="password"
                         [(ngModel)]="loginData.password" placeholder="Ingresa tu contraseña" required />
                     <i class="fas password-toggle" [class.fa-eye]="!showPassword" [class.fa-eye-slash]="showPassword"
