subiendo parte de inicio como rol de usuario normal

--- a/src/app/layout/normal/components/principal-normal/principal-normal.html
+++ b/src/app/layout/normal/components/principal-normal/principal-normal.html
@@ -1,5 +1,128 @@
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae illo exercitationem harum? Doloremque repellat delectus, asperiores perspiciatis commodi autem dicta nihil, iusto assumenda deserunt aut minus officiis accusantium culpa incidunt!
-Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nobis facilis, voluptatibus porro iste, dolorem hic tempore ratione voluptate repellat in adipisci ad minus quisquam officiis laborum. Autem quam doloremque sint?
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet rerum cumque nemo minima commodi, eaque officiis dolorum, earum, at quod perspiciatis ipsam ipsum id unde nostrum ab. Possimus, atque porro?
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat reiciendis unde iste ipsa vero quam officia mollitia ab, maxime optio, labore cumque reprehenderit quasi nulla eligendi eius dolorem fugit qui.
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur ducimus omnis dolore impedit provident! Enim adipisci beatae reiciendis suscipit eligendi, nostrum vel ducimus soluta, dignissimos sit magni iure magnam illum.
+<div class="sidebar">
+    <h2><i class="fas fa-address-book"></i> Contactos</h2>
+    <hr>
+    <ul>
+        <li>
+            <a href="#">
+                <img src="/img/perfil/image.png" alt="Perfil"
+                    style="width: 30px; height: 30px; border-radius: 50%; margin-right: 10px;">
+                Jose Carlos
+            </a>
+        </li>
+        <li>
+            <a href="#">
+                <img src="/img/perfil/image.png" alt="Perfil"
+                    style="width: 30px; height: 30px; border-radius: 50%; margin-right: 10px;">
+                Ana Gómez
+            </a>
+        </li>
+        <li>
+            <a href="#">
+                <img src="/img/perfil/image.png" alt="Perfil"
+                    style="width: 30px; height: 30px; border-radius: 50%; margin-right: 10px;">
+                Luis Torres
+            </a>
+        </li>
+        <li>
+            <a href="#">
+                <img src="/img/perfil/image.png" alt="Perfil"
+                    style="width: 30px; height: 30px; border-radius: 50%; margin-right: 10px;">
+                Valeria Díaz
+            </a>
+        </li>
+        <li>
+            <a href="#">
+                <img src="/img/perfil/image.png" alt="Perfil"
+                    style="width: 30px; height: 30px; border-radius: 50%; margin-right: 10px;">
+                Pedro Ramírez
+            </a>
+        </li>
+        <li>
+            <a href="#">
+                <img src="/img/perfil/image.png" alt="Perfil"
+                    style="width: 30px; height: 30px; border-radius: 50%; margin-right: 10px;">
+                Carla Fernández
+            </a>
+        </li>
+        <li>
+            <a href="#">
+                <img src="/img/perfil/image.png" alt="Perfil"
+                    style="width: 30px; height: 30px; border-radius: 50%; margin-right: 10px;">
+                Diego Moreno
+            </a>
+        </li>
+        <li>
+            <a href="#">
+                <img src="/img/perfil/image.png" alt="Perfil"
+                    style="width: 30px; height: 30px; border-radius: 50%; margin-right: 10px;">
+                Sofía Vega
+            </a>
+        </li>
+        <li>
+            <a href="#">
+                <img src="/img/perfil/image.png" alt="Perfil"
+                    style="width: 30px; height: 30px; border-radius: 50%; margin-right: 10px;">
+                Andrés Ruiz
+            </a>
+        </li>
+        <li>
+            <a href="#">
+                <img src="/img/perfil/image.png" alt="Perfil"
+                    style="width: 30px; height: 30px; border-radius: 50%; margin-right: 10px;">
+                Mariana Soto
+            </a>
+        </li>
+    </ul>
+</div>
+
+<div class="main-content">
+    <div class="header">
+        <h1><i class="fas fa-tachometer-alt"></i> Dashboard</h1>
+        <div class="user-info"><i class="fas fa-user"></i> Bienvenido, Admin</div>
+    </div>
+
+    <div class="dashboard">
+        <div class="card">
+            <h3><i class="fas fa-chart-bar"></i> Ventas Mensuales</h3>
+            <div class="bar-chart">
+                <div class="bar" style="height: 120px;">
+                    <span class="bar-label">Enero</span>
+                </div>
+                <div class="bar" style="height: 190px;">
+                    <span class="bar-label">Febrero</span>
+                </div>
+                <div class="bar" style="height: 30px;">
+                    <span class="bar-label">Marzo</span>
+                </div>
+                <div class="bar" style="height: 50px;">
+                    <span class="bar-label">Abril</span>
+                </div>
+                <div class="bar" style="height: 20px;">
+                    <span class="bar-label">Mayo</span>
+                </div>
+                <div class="bar" style="height: 150px;">
+                    <span class="bar-label">Junio</span>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <h3><i class="fas fa-chart-pie"></i> Distribución de Usuarios</h3>
+            <div class="pie-chart"></div>
+            <div class="pie-legend">
+                <div class="legend-item">
+                    <div class="legend-color" style="background-color: #666666;"></div>
+                    <span>Activos</span>
+                </div>
+                <div class="legend-item">
+                    <div class="legend-color" style="background-color: #888888;"></div>
+                    <span>Inactivos</span>
+                </div>
+                <div class="legend-item">
+                    <div class="legend-color" style="background-color: #555555;"></div>
+                    <span>Nuevos</span>
+                </div>
+            </div>
+        </div>
+        <button class="action-button"><i class="fas fa-file-download"></i> Generar Reporte</button>
+    </div>
+</div>
