--- a/src/app/shared/components/navbar/normal-navbar/normal-navbar.html
+++ b/src/app/shared/components/navbar/normal-navbar/normal-navbar.html
@@ -19,7 +19,6 @@
                 <a (click)="logout()" class="nav-link" role="button">
                     <i class="fas fa-sign-out-alt"></i>
                 </a>
-
             </div>
         </nav>
     </div>
@@ -27,7 +26,14 @@
 <main>
     <div class="sidebar">
         <ul>
-            <li><a href="#"><i class="fas fa-user"></i> Perfil</a></li>
+            <li *ngIf="isLoggedIn && normales.length > 0">
+                <a href="#"><i class="fas fa-user"></i> {{ normales[0].nombre }} {{ normales[0].apellido }}</a>
+            </li>
+            <li>
+                <a href="#" class="nav-link">
+                    <i class="fas fa-search"></i> Buscar
+                </a>
+            </li>
             <li><a href="#"><i class="fas fa-compass"></i> Explorar</a></li>
             <li><a href="#"><i class="fas fa-bookmark"></i> Guardados</a></li>
             <li><a href="#"><i class="fas fa-calendar-alt"></i> Eventos</a></li>
