--- a/src/app/shared/components/navbar/admin-navbar/admin-navbar.html
+++ b/src/app/shared/components/navbar/admin-navbar/admin-navbar.html
@@ -38,13 +38,17 @@
             <mat-divider></mat-divider>
             <mat-list>
                 <ng-container *ngFor="let menuItem of datosmenuPrimero">
-                    <mat-list-item [routerLink]="[menuItem.ruta]" (click)="toggleSubMenu(menuItem)">
+                    <!-- Ítem principal -->
+                    <mat-list-item (click)="handleClick(menuItem)">
                         <mat-icon>{{ menuItem.icono }}</mat-icon>
                         <span>{{ menuItem.nombre }}</span>
+                        <mat-icon *ngIf="tieneSubMenu(menuItem)">expand_more</mat-icon>
                     </mat-list-item>
-                    <ng-container *ngIf="menuItem.mostrarSubMenu">
-                        <mat-list-item *ngFor="let subMenuItem of this.menu2FiltradoPorCategoria[menuItem.categoria]"
-                            [routerLink]="[subMenuItem.ruta]">
+
+                    <!-- Submenús, solo si existen -->
+                    <ng-container *ngIf="menuItem.mostrarSubMenu && tieneSubMenu(menuItem)">
+                        <mat-list-item *ngFor="let subMenuItem of menu2FiltradoPorCategoria[menuItem.categoria]"
+                            (click)="irARuta(subMenuItem.ruta)">
                             <mat-icon>{{ subMenuItem.icono }}</mat-icon>
                             <span>{{ subMenuItem.nombre }}</span>
                         </mat-list-item>
@@ -52,10 +56,12 @@
                 </ng-container>
             </mat-list>
         </mat-sidenav>
+
         <mat-sidenav-content class="sidenav-content">
             <div class="content-wrapper">
                 <router-outlet></router-outlet>
             </div>
         </mat-sidenav-content>
     </mat-sidenav-container>
+
 </div>
