--- a/src/app/shared/components/modal/modal-eliminacion/modal-eliminacion.css
+++ b/src/app/shared/components/modal/modal-eliminacion/modal-eliminacion.css
@@ -1,41 +1,36 @@
-
-.modal-overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 90%;
-    background: rgba(0, 0, 0, 0.5); /* Fondo semitransparente */
-    display: flex;
-    justify-content: center;
-    align-items: center;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
-
-.card {
-
-
-  padding: 24px;
-  box-shadow: 0 6px 16px rgba(0, 0, 0, 0.08);
-  transition: transform 0.2s ease, box-shadow 0.2s ease, border-color 0.2s ease;
-}
-
 
 .card-header {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 24px 36px;
     background: linear-gradient(135deg, #1e3a8a, #3b82f6);
     color: #ffffff;
-    padding: 1.5rem;
-    border-radius: 10px 10px 0 0; /* Bordes redondeados solo en la parte superior */
-    text-align: left;
-}
-
-.card-header h2 {
-    font-size: 1.5rem;
-    font-weight: 600;
-    margin: 0;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
 }
 
 .card-body {
-    padding: 2rem;
+    display: flex;
+    flex-direction: column;
+    padding: 24px 28px;
+    background-color: #ffffff;
+    border: 1px solid #e0e0e0;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
+}
+
+
+.content-area {
+    background: #ffffff;
+    padding: 30px;
+    border-radius: 15px;
 }
 
 .card-body p {
@@ -45,6 +40,8 @@
     margin: 0 0 1.5rem 0;
     line-height: 1.5;
 }
+
+
 
 mat-form-field {
     display: block;
@@ -66,12 +63,14 @@ mat-form-field input:focus {
     box-shadow: 0 0 0 3px rgba(59, 130, 246, 0.3);
 }
 
+
 .button-group {
     display: flex;
     justify-content: center;
     gap: 1rem;
     margin-top: 1.5rem;
 }
+
 
 .btn {
     display: flex;
@@ -93,20 +92,21 @@ mat-form-field input:focus {
     box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
 }
 
+
 .btn.confirm {
     background: linear-gradient(135deg, #1e3a8a, #3b82f6);
     color: #ffffff;
 }
 
 .btn.confirm:hover {
-    background: linear-gradient(135deg, #1e40af, #60a5fa); /* Gradiente más claro para hover */
+    background: linear-gradient(135deg, #1e40af, #60a5fa);
 }
 
 .btn.cancel {
-    background: linear-gradient(135deg, #1e40af, #60a5fa); /* Gradiente más claro para hover */
+    background: linear-gradient(135deg, #1e40af, #60a5fa);
     color: #ffffff;
 }
 
 .btn.cancel:hover {
-      background: linear-gradient(135deg, #1e40af, #60a5fa); /* Gradiente más claro para hover */
+    background: linear-gradient(135deg, #1e40af, #60a5fa);
 }
