--- a/src/app/layout/admin/components/usuarios/lst-usuarios-activos/lst-usuarios-activos.css
+++ b/src/app/layout/admin/components/usuarios/lst-usuarios-activos/lst-usuarios-activos.css
@@ -1,6 +1,6 @@
 ::ng-deep .custom-dialog {
   width: 80vw !important;
-  max-width: 95vw !important;
+  max-width: 100vw !important;
   height: 90vh !important;
   max-height: 95vh !important;
   padding: 0 !important;
@@ -15,5 +15,75 @@
     height: 100vh !important;
     margin: 0 !important;
     border-radius: 0 !important;
+  }
+
+  @media (max-width: 912px) {
+    width: 100vw !important;
+    height: 100vh !important;
+    margin: 0 !important;
+    border-radius: 0 !important;
+  }
+}
+
+@media (max-width: 1024px) {
+  ::ng-deep .custom-dialog {
+
+
+    width: 80vw !important;
+    max-width: 100vw !important;
+    height: 43vh !important;
+    max-height: 95vh !important;
+    padding: 0 !important;
+  }
+
+  .form-row {
+    flex-direction: row;
+    gap: 12px;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+
+  .form-group {
+    width: 48%;
+  }
+
+  .button-row {
+    flex-direction: row;
+    justify-content: center;
+  }
+}
+
+@media (max-width: 375px) {
+  ::ng-deep .custom-dialog {
+    width: 100vw !important;
+    height: 190vh !important;
+    margin: 0 !important;
+    border-radius: 0 !important;
+  }
+
+  .form-row {
+    flex-direction: row;
+    gap: 12px;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+
+  .form-group {
+    width: 48%;
+  }
+
+  .button-row {
+    flex-direction: row;
+    justify-content: center;
+  }
+}
+
+@media (max-width: 820px) {
+  ::ng-deep .custom-dialog {
+    width: 80vw !important;
+    max-width: 100vw !important;
+    height: 47vh !important;
+    max-height: 95vh !important;
+    padding: 0 !important;
   }
 }
