--- a/src/app/layout/admin/components/usuarios/edit-usuario/edit-usuario.css
+++ b/src/app/layout/admin/components/usuarios/edit-usuario/edit-usuario.css
@@ -4,6 +4,12 @@
     box-sizing: border-box;
 }
 
+.content-area {
+    background: #ffffff;
+    padding: 20px;
+    border-radius: 15px;
+}
+
 .card-header {
     display: flex;
     align-items: center;
@@ -18,61 +24,31 @@
 .card-body {
     display: flex;
     flex-direction: column;
-      padding: 15px 28px 0px ;
-      border-bottom-left-radius: 15px;
+    padding: 10px 28px ;
+    border-bottom-left-radius: 15px;
     border-bottom-right-radius: 15px;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
-       background-color: #ffffff;
+    background-color: #ffffff;
     border: 1px solid #e0e0e0;
 }
 
 
-.content-area {
-    background: #ffffff;
-    padding: 20px;
-    border-radius: 15px;
-}
-
-.close-button {
-    background-color: transparent;
-    border: 2px solid #ffffff;
-    color: #ffffff;
-    font-size: 1em;
-    font-weight: bold;
-    padding: 6px 14px;
-    border-radius: 8px;
-    cursor: pointer;
-    transition: all 0.2s ease;
-}
-
-.close-button:hover {
-    background-color: #ffffff;
-    color: #1e3a8a;
-}
-
-
-.persona {
-    display: flex;
-    flex-direction: column;
-    gap: 6px;
-    margin-bottom: 16px;
-}
 
 .persona p {
     margin: 6px 0;
     font-size: 1em;
 }
 
-.form-row {
+.row {
     display: flex;
     justify-content: space-between;
-    margin-bottom: 20px;
+  
     flex-wrap: wrap;
 }
 
-
 .form-group {
-    width: 30%;
+    padding: 0px 0px 10px 0px;
+    width: 45%;
     text-align: left;
     position: relative;
 }
@@ -110,30 +86,15 @@
     outline: none;
     border-color: #1e40af;
 }
-.button-row {
-  display: flex;
-  justify-content: center;
-  gap: 16px; /* espacio entre botones */
-  margin-top: 20px;
-}
 
 .button-row .form-group {
   margin: 0;
 }
 
-.extra-large {
-    width: 100%;
-
-    text-align: left;
-    position: relative;
-}
-
 .btn {
     display: flex;
     align-items: center;
-    /* Centrado vertical */
     justify-content: center;
-    /* Centrado horizontal */
     gap: 10px;
     padding: 12px 18px;
     border: none;
@@ -145,14 +106,6 @@
     transition: all 0.4s cubic-bezier(0.68, -0.55, 0.27, 1.55);
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
-
-
-.btn:hover {
-    transform: scale(1.05) translateY(-5px);
-    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
-}
-
-
 .btn.confirm {
     background: linear-gradient(135deg, #1e3a8a, #3b82f6);
     color: #ffffff;
@@ -163,7 +116,7 @@
 }
 
 .btn.cancel {
-     background: linear-gradient(135deg, #1e3a8a, #3b82f6);
+ background: linear-gradient(135deg, #1e3a8a, #3b82f6);
     color: #ffffff;
 }
 
@@ -171,6 +124,10 @@
     background: linear-gradient(135deg, #1e40af, #60a5fa);
 }
 
+.btn:hover {
+    transform: scale(1.05) translateY(-5px);
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
+}
 /* Celulares grandes (pantallas pequeñas) */
 @media (max-width: 768px) {
     .form-row {
@@ -220,22 +177,4 @@
     .form-group select {
         font-size: 14px;
     }
-}
-
-.password-toggle {
-    position: absolute;
-    right: 10px;
-    top: 50%;
-    transform: translateY(-50%);
-    cursor: pointer;
-    color: #2563eb;
-    font-size: 16px;
-}
-
-.password-toggle:hover {
-    color: #1e40af;
-}
-
-.password-group {
-    position: relative;
 }
