--- a/src/app/layout/moderador/components/usuarios/usuarios-suspendidos/lst-usuario-suspendidos/lst-usuario-suspendidos.html
+++ b/src/app/layout/moderador/components/usuarios/usuarios-suspendidos/lst-usuario-suspendidos/lst-usuario-suspendidos.html
@@ -1,1 +1,7 @@
-<p>lst-usuario-suspendidos works!</p>
+<app-table 
+[icono]="iconoUsuarios" 
+[titulo]="tituloUsuarios" 
+[columnas]="columnas" 
+[datos]="datos"
+[botonesConfig]="botonesConfig" >
+</app-table>
