--- a/src/app/layout/auth/components/suspendido-error/suspendido-error.html
+++ b/src/app/layout/auth/components/suspendido-error/suspendido-error.html
@@ -6,7 +6,7 @@
             </div>
             <h1>SocialLike</h1>
         </div>
-        <h2>Suspendimos tu cuenta el 31 de octubre de 2022</h2>
+        <h2>Suspendimos tu cuenta el {{fecha}}</h2>
         <p>¿Qué significa?</p>
         <ul class="info-list">
             <li><span class="warning-icon"><i class="fas fa-exclamation-triangle"></i></span> Tu cuenta infringe
@@ -20,7 +20,7 @@
         <ul class="info-list">
             <li>Al no estar de acuerdo con esta decisión, te recomendamos algunos pasos para solicitar una revisión</li>
         </ul>
-        <button class="continue-button">Oponerse a la decisión</button>
+        <button class="continue-button" (click)="oponer()" >Oponerse a la decisión</button>
         <a href="login" class="exit-link"(click)="logout()">Iniciar sesión en otra cuenta</a>
     </div>
 </body>
