--- a/src/app/layout/moderador/components/usuarios/usuarios-bloqueados/lst-usuario-bloqueados/lst-usuario-bloqueados.html
+++ b/src/app/layout/moderador/components/usuarios/usuarios-bloqueados/lst-usuario-bloqueados/lst-usuario-bloqueados.html
@@ -1,1 +1,7 @@
-<p>lst-usuario-bloqueados works!</p>
+<app-table 
+[icono]="iconoUsuarios" 
+[titulo]="tituloUsuarios" 
+[columnas]="columnas" 
+[datos]="datos"
+[botonesConfig]="botonesConfig" >
+</app-table>
